--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,6 @@
-name: profile_picture
+name: downloader
 description: A new Flutter project.
-
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -11,31 +9,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   cupertino_icons: ^1.0.0
-  http:
-  flutter_insta: ^0.1.3
-  lottie:
-  font_awesome_flutter:
-  url_launcher:
-  image_downloader:
-  permission_handler:
+  http: ^0.12.2
+  flutter_insta: ^0.1.5 
+  lottie: 0.7.0+1
+  font_awesome_flutter: ^8.12.0
+  url_launcher: ^5.7.10
+  image_downloader: ^0.20.1
+  permission_handler: ^5.1.0+2
   flutter_downloader: ^1.1.9
-  flutter_launcher_icons:
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
     
-flutter_icons:
-  ios: true
-  android: true
-  image_path_ios: "assets/icon.png"
-  image_path_android: "assets/icon.png"
-  adaptive_icon_background: "assets/icon.png"
-  adaptive_icon_foreground: "assets/icon.png"
-
 flutter:
   uses-material-design: true
   
   assets:
     - assets/
+
+  
